# file-denest

./: .gitignore  LICENSE  README.md  pyproject.toml
denest/: finder.py  main.py
